<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.FirmwareMultiDevices"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/returnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:layout_gravity="left"/>

        <TextView
            android:id="@+id/selectDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectDevice"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/firmwareDownloadForSelectedDevices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upgrade"
            android:layout_gravity="right"/>

        <Button
            android:id="@+id/done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/done"
            android:layout_gravity="right"
            android:visibility="gone"/>


    </androidx.appcompat.widget.Toolbar>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:ems="10"
        android:text="@string/unselectedBluPOINTDevices"
        android:textAlignment="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/scanDeviceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />


    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_shadow_end_color"
        android:ems="10"
        android:text="@string/selectedBluPOINTDevices"
        android:textAlignment="center" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/selectedDeviceRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>